tests/snapshots/run_wpt_conformance__onnx_reduceProduct_float32_1D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_product.https.any.js",
    "reduceProduct float32 1D tensor default options",
    "onnx",
    "PASS",
)
